Spacing issue corrections

--- a/style.css
+++ b/style.css
@@ -9,3 +9,11 @@ footer {
 .note {
     padding: 10px 20px 10px 20px;
 }
+
+html, body {
+width: 100%;
+height: 100%;
+margin: 0px;
+padding: 0px;
+overflow-x: hidden;
+}
